# my-pico-test

./: Cargo.toml  Makefile  build.rs  link.ld
.cargo/: config.toml
src/: clock.rs  cs.rs  gpio.rs  main.rs  sio.rs  systick.rs  uart.rs
