[package]
name = "my-pico-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-boot2 = "0.3.0"
volatile-register = "0.2.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = { version = "1.1", features = ["restore-state-bool"] }
